--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
       <artifactId>jackson-dataformat-yaml</artifactId>
       <version>2.15.0</version>
    </dependency>
+    <dependency>
+    	<groupId>senac-20241-backend-exemplos</groupId>
+    	<artifactId>senac-20241-backend-exemplos</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies><build>
     <plugins>
       <plugin>
