--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,14 @@
       <artifactId>jackson-dataformat-yaml</artifactId>
       <version>2.15.0</version>
    </dependency>
-  </dependencies><build>
+   
+   <dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.10.1</version>
+	</dependency>
+  </dependencies>
+  <build>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
